=== master

* Make mysql adapter no longer use connection's server_version, since it isn't accurate when using the ruby-mysql driver (jeremyevans)

* Add sql_comments plugin for automatically including comments on queries generated by model class, instance, and dataset methods (jeremyevans)

* Make sql_comments Database extension support Database#with_comments, for automatically including comments for queries executed inside the block (jeremyevans)

* Fix sql_comments extension to not modify cached SQL for a dataset (jeremyevans)

=== 5.51.0 (2021-12-01)

* Make eager loading via tactical_eager_loading no longer modify objects who already have a cached value for the association (jeremyevans)

* Make association cloning handle cases where clone association sets different :class option than cloned association (jeremyevans)

* Make column schema entries on MySQL include an :extra entry for the Extra column in DESCRIBE output (bschmeck) (#1791)

* Update mock PostgreSQL adapter to default to PostgreSQL 14 instead of PostgreSQL 9.5 (jeremyevans)

* Support Dataset#with_recursive :search and :cycle options on PostgreSQL 14+ for result ordering and cycle detection (jeremyevans)

* Avoid method redefined verbose mode warnings in lazy_attributes plugin (jeremyevans)

=== 5.50.0 (2021-11-01)

* Make Migrator :allow_missing_migration_files also allow down migrations where the current database version is greater than the last migration file version (francisconeves97) (#1789)

* Fix Model#freeze in composition, serialization, and serialization_modification_detection plugins to return self (jeremyevans) (#1788)

* Fix typecasting of lazy columns when using lazy_attributes plugin in model where dataset selects from subquery (jeremyevans)

* Add :before_preconnect Database option, for configuring extensions loaded via :preconnect_extensions (MarcPer, jeremyevans) (#1786)

* Change Dataset#columns! to use a LIMIT 0 query instead of a LIMIT 1 query (jeremyevans)
