@@ -1,5 +1,7 @@
 === master
 
+* Make mysql adapter support ruby-mysql 3 API (jeremyevans) (#1795)
+
 * Make mysql adapter no longer use connection's server_version, since it isn't accurate when using the ruby-mysql driver (jeremyevans)
 
 * Add sql_comments plugin for automatically including comments on queries generated by model class, instance, and dataset methods (jeremyevans)
